# epublib

./: .gitignore  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci-tests.yml  docs.yml
docs/: HowToBuild.md  README.md  conf.py  index.rst
examples/01_book_creation/: README.md  main.py  styles.css
examples/02_book_parsing/: AliceInWonderland.epub  README.md  main.py
examples/03_book_metadata/: metadata.py
examples/04_markdown/: README.md  main.py  styles.css
examples/05_validation/: README.md  main.py
examples/06_mobi/: Keraban.mobi  main.py
requirements/: dev.txt  runtime.txt
src/epublib/: __init__.py  __main__.py  book.py  epub.py
src/pypublib/: __init__.py  __main__.py  book.py  chapter.py  edit.py  epub.py  markdown.py  mobi.py  mobi_parser.py
test/: conftest.py
test/epublib/: TestChapter.py  TestEditing.py  TestEpub.py  TestHtml.py  TestMarkdown.py  TestOpf.py  TestValidation.py  __init__.py
test/pypublib/: __init__.py
tests/pypublib/: TestInit.py  TestMobi.py  __init__.py
